--- a/index.css
+++ b/index.css
@@ -1,3 +1,54 @@
 #heading {
   color: red;
 }
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #000;
+  padding: 0 4%;
+}
+
+.header .logo-container .logo {
+  width: 110px;
+}
+
+.header .nav-items ul {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+.header .nav-items ul li {
+  padding: 10px;
+  margin: 10px;
+  font-size: 24px;
+}
+
+.search {
+  padding: 10px;
+}
+.restro-container {
+  border: 1px solid #000;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.restro-container .res-card {
+  width: 190px;
+  border: 1px solid #000;
+  padding: 10px;
+  margin: 10px;
+  background-color: #f0f0f0;
+  display: flex;
+  flex-direction: column;
+  h3, h4 {
+    margin: 10px 0 0;
+  }
+  img {
+    height: 150px;
+    object-fit: cover;
+  }
+}
