--- a/index.css
+++ b/index.css
@@ -26,8 +26,9 @@
   font-size: 24px;
 }
 
-.search {
-  padding: 10px;
+.filter-btn {
+  margin: 10px;
+  cursor: pointer;
 }
 .restro-container {
   border: 1px solid #000;
