--- a/index.css
+++ b/index.css
@@ -1,107 +1,3 @@
-#heading {
-    color: red;
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border: 1px solid #000;
-    padding: 0 4%;
-}
-
-.header .logo-container .logo {
-    width: 110px;
-}
-
-.header .nav-items ul {
-    display: flex;
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
-}
-
-.header .nav-items ul li {
-    padding: 10px;
-    margin: 10px;
-    font-size: 24px;
-}
-
-.filter-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.filter-btn {
-    margin: 10px;
-    cursor: pointer;
-}
-
-.restro-container {
-    border: 1px solid #000;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.restro-container .res-card {
-    width: 190px;
-    border: 1px solid #000;
-    padding: 10px;
-    margin: 10px;
-    background-color: #f0f0f0;
-    display: flex;
-    flex-direction: column;
-
-    h3,
-    h4 {
-        margin: 10px 0 0;
-    }
-
-    img {
-        height: 150px;
-        object-fit: cover;
-    }
-}
-
-.shimmer-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    border: 1px solid #493f3f;
-}
-
-.shimmer-cards {
-    width: 190px;
-    height: 400px;
-    padding: 10px;
-    margin: 10px;
-    background-color: #f0f0f0;
-}
-
-.shimmer-filter {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.shimmer-filter .shimmer-btn {
-    width: 100px;
-    height: 15px;
-    background-color: #f0f0f0;
-    border: none;
-    outline: none;
-    margin: 10px;
-}
-
-.login {
-    padding: 0 20px;
-    cursor: pointer;
-}
-
-.user-card {
-    padding: 10px;
-    border: 1px solid #000;
-    margin-bottom: 1px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
